# EchosInTheDark

./: .cursorignore  .editorconfig  .gitignore  CLAUDE.md  Justfile  README.md  REFACTOR.md  changes.diff  dune-project  echoes_dark.opam  ecs_migration_checklist.md  game.save  package.json  rl2025.opam
.context/: rl_core_action_handler.ml.context  rl_core_action_handler.ml.context.md  rl_core_actor_manager.ml.context.md  rl_core_backend.ml.context.md  rl_core_core_log.ml.context.md
.cursor/: LEARNINGS.md  README.md  SPECS.md  TASKS.md  mcp.json
.roo/: mcp.json
__bin/: dune  game.ml  io.ml  main.ml
_build/: .db  .digest-db  log
docs/: architecture.md  chunking_design.md  core_architecture.md  project_structure.md  story_line.md  (+1 more)
learnings/effects/: dune  effect_event_system.ml  effect_examples.ml  effect_handlers.ml  effect_turn_system.ml
src/: dune  main.ml  main_run.ml  mainloop.ml  modules.ml  state.ml  state.mli
src/backend/: backend.ml  entity.ml  entity.mli  entity_manager.ml  mode.ml  tilemap.ml  types.ml
src/backend/entity/: entity.ml
src/backend/map/: tile.ml
src/constants/: constants.ml  dune  render_constants.ml
src/core/: ai.ml  backend.ml  console.ml  core_log.ml  dune  input.ml  turn_queue.ml  util.ml
src/core/components/: components.ml  dune  equipment.ml  faction.ml  field_of_view.ml  stats.ml
src/core/dungeon/: chunk.ml  dune  tile.ml
src/core/effect_systems/: README.md  dune  effect_action_handler.ml  effect_action_handler_integration.ml  effect_event_system_integration.ml  effect_state_integration.ml  effect_systems.ml  effect_systems_integration.ml  effect_turn_system.ml  handlers.ml  turn_system.ml
src/core/entities/: dune  queries.ml  spawner.ml  spawner.mli
src/core/events/: dune  event_bus.ml
src/core/managers/: actor_manager.ml  chunk_manager.ml  dune  entity_manager.ml
src/core/state/: dune  state.ml  state_actors.ml  state_chunk.ml  state_entities.ml  state_levels.ml  state_types.ml  state_utils.ml
src/core/systems/: action_handler.ml  combat_system.ml  dune  log_system.ml  movement_system.ml  systems.ml
src/core/worldgen/: config.ml  dune  monster.ml  worldgen_utils.ml
src/core/worldgen/algorithms/: ca.ml  prefab.ml  rooms.ml
src/core/worldgen/generators/: biome_generator.ml  chunk_generator.ml  world_generator.ml
src/loader/: dune  loader.ml
src/logger/: dune  logger.ml
src/rl_core/: action.ml  action_handler.ml  action_handler.mli  actions.ml  actions.mli  actor.ml  actor_manager.ml  ai.ml  ai.mli  backend.ml  backend.mli  chunk_manager.ml  core_log.ml  core_log.mli  dune  entity.ml  entity_manager.ml  input.ml  input.mli  map_manager.ml  map_manager.mli  mode.ml  profiler.ml  spawner.ml  state.ml  state.mli  turn_queue.ml  turn_queue.mli  turn_system.ml  turn_system.mli  types.ml  util.ml  utils.ml
src/rl_core/actors/: actor.ml  actor_manager.ml  actor_manager.mli  dune
src/rl_core/components/: components.ml  dune  equipment.ml  faction.ml  field_of_view.ml  health.ml  inventory.ml  item.ml  packed_components.ml  position.ml  stats.ml
src/rl_core/dungeon/: chunk.ml  dune  tile.ml  tilemap.ml
src/rl_core/dungeon/mapgen/: biome.ml  ca.ml  chunk_generator.ml  dune  mapgen_utils.ml  monster_placement.ml  rooms.ml
src/rl_core/effect_systems/: README.md  dune  turn_system.ml
src/rl_core/entities/: dune  entity_manager.ml  entity_manager.mli  queries.ml  spawner.ml  spawner.mli
src/rl_core/events/: dune  event_bus.ml  event_bus.mli
src/rl_core/integrations/: dune  effect_action_handler_integration.ml  effect_event_system_integration.ml  effect_state_integration.ml  effect_systems_integration.ml  effect_turn_system_integration.ml
src/rl_core/managers/: actor_manager.ml  chunk_manager.ml  dune
src/rl_core/map/: tile.ml  tilemap.ml
src/rl_core/mapgen/: biome.ml  ca.ml  chunk_generator.ml  config.ml  config.mli  dune  generator.ml  mapgen_types.ml  monster_placement.ml  prefab.ml  prefab.mli  rooms.ml  rooms.mli  util.ml
src/rl_core/profiler/: dune  performance_profiler.ml  profiler.ml
src/rl_core/state/: dune  state.ml  state_actors.ml  state_entities.ml  state_levels.ml  state_types.ml  state_types.mli  state_utils.ml
src/rl_core/systems/: action_handler.ml  combat_system.ml  dune  item_system.ml  log_system.ml  movement_system.ml  packed_system.ml  position_profiler.ml  stairs_system.ml  systems.ml  turn_system.ml
src/rl_core/types/: common.ml  pos.ml
src/rl_core/worldgen/: biome.ml  dune  monster.ml  worldgen_utils.ml
src/rl_core/worldgen/algorithms/: ca.ml  rooms.ml
src/rl_core/worldgen/generators/: biome_generator.ml  chunk_generator.ml  world_generator.ml  world_generator.mli
src/rl_lib/: dune  main.ml  main_run.ml  mainloop.ml  state.ml
src/rl_lib/backend/: actions.ml  actor.ml  actor_manager.ml  backend.ml  entity.ml  spawner.ml
src/rl_lib/backend/turn/: turn_queue.ml  turn_system.ml
src/rl_lib/backend/types/: inventory.ml  stats.ml
src/rl_lib/ui/: grafx.ml  modules.ml
src/rl_lib/ui/screens/: mapgen.ml  play.ml
src/rl_lib/utils/: bitset.ml  renderer.ml  rng.ml  utils.ml
src/rl_lib/view/: grafx.ml
src/rl_lib/view/screens/: play.ml
src/rl_loader/: dune  loader.ml
src/rl_types/: biome.ml  dune  loc.ml  rl_types.ml
src/rl_ui/: constants.ml  dune  game_over.ml  grafx.ml  input.ml  mainloop.ml  mainmenu.ml  mapgen.ml  modules.ml  modules_d.ml  play.ml  render_utils.ml  renderer.ml  renderer.mli  screens.ml  state.ml  ui_log.ml
src/rl_ui/render/: dune  render_equipment.ml  render_map.ml  render_types.ml  render_ui.ml  render_utils.ml  renderer.ml
src/rl_utils/: dune  helpers.ml  rng.ml  utils.ml  utils.mli
src/types/: biome.ml  dune  types.ml
src/ui/: dune  frontend.ml  input.ml  mainmenu.ml  modules.ml  modules_d.ml  play.ml  screen.ml  screens.ml  state.ml  ui_log.ml
src/ui/render/: dune  render_equipment.ml  render_map.ml  render_ui.ml  render_utils.ml  renderer.ml
src/utils/: bitset.ml  fov.ml  log.ml  utils_log.ml
src/view/: grafx.ml  mainmenu.ml  mapgen.ml  play.ml  renderer.ml  tile_coords.ml
src/view/screens/: mapgen.ml  play.ml
(+63 files in other folders)
