(lang dune 3.9)

(name rl2025)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jacob LeCoq")

(maintainers "Jacob LeCoq")

(license MIT)

(documentation https://github.com/Yendor/rl2025)

(package
 (name rl2025)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
