(lang dune 3.9)

(name echos_dark)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jacob LeCoq")

(maintainers "Jacob LeCoq")

(license MIT)

(documentation https://github.com/bayou-brogrammer/echoes_dark)

(package
 (name echos_dark)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
