(include_subdirs unqualified)

(executable
 (public_name rl2023)
 (name main)
 (libraries raylib raygui clap containers base stdio lwt lwt.unix fmt logs logs.fmt owl-base ppx_yojson_conv_lib)
 (preprocess
    (pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord lens.ppx_deriving ppx_hash ppx_yojson_conv))
  (modes exe)
  )

(env
  (dev
    (flags (:standard -warn-error -A -w -30))))
