(include_subdirs qualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))

(library
 (name learnings)
 (modules
  effect_handlers
  effect_examples
  effect_turn_system
  effect_event_system)
 (libraries
  base
  components
  core_kernel
  core_kernel.pairing_heap
  dungeon
  entities
  events
  logs
  logs.fmt
  worldgen
  utils
  state
  systems
  types
  chunk_manager
  entity_manager
  effect_systems)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))
