(include_subdirs qualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))

(library
 (name game_core)
 (modules ai backend input)
 (libraries
  base
  components
  console
  logger
  dungeon
  entities
  logs
  worldgen
  utils
  state
  systems
  types
  chunk_manager
  entity_manager
  effect_systems)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))

(library
 (name console)
 (modules console)
 (libraries base core_kernel logs))

(library
 (name core_utils)
 (modules util)
 (libraries base core_kernel logs types components))

(library
 (name turn_queue)
 (modules turn_queue)
 (libraries base containers logs types logger)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving_yojson ppx_deriving.show)))
