(include_subdirs qualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))

(library
 (name rl_core)
 (modules ai backend input)
 (libraries
  actors
  base
  components
  containers
  core_kernel
  core_kernel.pairing_heap
  dungeon
  entities
  events
  logs
  logs.fmt
  mapgen
  rl_utils
  state
  systems
  types
  chunk_manager)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))

(library
 (name core_log)
 (modules core_log)
 (libraries base core_kernel containers logs))

(library
 (name core_utils)
 (modules util)
 (libraries base core_kernel containers logs types components))

(library
 (name chunk_manager)
 (modules chunk_manager)
 (libraries base core_kernel containers logs types components dungeon mapgen)
 (preprocess
  (pps
   ppx_jane
   ppx_enumerate
   ppx_yojson_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))

(library
 (name turn_queue)
 (modules turn_queue)
 (libraries base core_kernel containers logs types core_log))

(library
 (name types)
 (modules types)
 (libraries base core_kernel containers logs)
 (preprocess
  (pps
   ppx_jane
   ppx_enumerate
   ppx_yojson_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))
