(include_subdirs qualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))

(library
 (name rl_core)
 (modules ai backend input profiler)
 (libraries
  base
  components
  core_kernel
  core_kernel.pairing_heap
  dungeon
  entities
  events
  logs
  logs.fmt
  worldgen
  utils
  state
  systems
  rl_types
  chunk_manager
  entity_manager)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))

(library
 (name core_log)
 (modules core_log)
 (libraries base core_kernel logs))

(library
 (name core_utils)
 (modules util)
 (libraries base core_kernel logs rl_types components))

(library
 (name turn_queue)
 (modules turn_queue)
 (libraries base core_kernel logs rl_types core_log bheap))
