(include_subdirs unqualified)

(library
 (name rl_lib)
 (libraries
  base
  core_kernel
  core_kernel.pairing_heap
  clap
  containers
  fmt
  logs
  logs.fmt
  lwt
  lwt.unix
  owl-base
  ppx_yojson_conv_lib
  raygui
  raylib
  stdio)
 (inline_tests)
 (preprocess
  (staged_pps
   lens.ppx_deriving
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_hash
   ppx_import
   ppx_inline_test
   ppx_yojson_conv)))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))
