(library
 (name rl_lib)
 (libraries rl_core rl_ui rl_utils)
 (inline_tests)
 (preprocess
  (staged_pps
   lens.ppx_deriving
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_hash
   ppx_import
   ppx_inline_test
   ppx_yojson_conv)))
