(include_subdirs qualified)

(library
 (name rl_ui)
 (libraries
  rl_core
  core_log
  rl_utils
  rl_loader
  base
  core_kernel
  raylib
  raygui
  constants
  render_constants)
 (preprocess
  (pps ppx_yojson_conv ppx_compare ppx_sexp_conv ppx_hash ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))
