(include_subdirs qualified)

(library
 (name ui)
 (modules play modules modules_d mainmenu screens game_over state input)
 (libraries
  base
  constants
  console
  core_kernel
  logger
  raygui
  raylib
  render
  render_constants
  game_core
  loader
  utils
  ui_log)
 (preprocess
  (pps ppx_yojson_conv ppx_compare ppx_sexp_conv ppx_hash ppx_deriving.show)))

(library
 (name ui_log)
 (modules ui_log)
 (libraries base core_kernel logs logger))

(env
 (dev
  (flags
   (:standard -warn-error -A -w -30))))
