(include_subdirs unqualified)

(library
 (name effect_systems)
 (modules
  handlers
  turn_system
  effect_event_system_integration
  effect_action_handler_integration
  effect_state_integration
  effect_systems_integration)
 (libraries
  base
  core_kernel
  logs
  types
  components
  events
  state
  systems
  turn_queue
  logger)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))
