(include_subdirs unqualified)

(library
 (name effect_systems)
 (modules
  effect_action_handler
  effect_state
  effect_systems
  effect_turn_system
  handlers)
 (libraries
  base
  core_kernel
  logs
  types
  components
  events
  state
  systems
  turn_queue
  logger)
 (preprocess
  (pps ppx_jane ppx_compare ppx_deriving.show)))
