(include_subdirs no)

(library
 (name dungeon)
 (modules tile tilemap chunk)
 (libraries
  base
  core_kernel
  containers
  logs
  types
  entities
  core_log
  raylib
  rl_utils)
 (preprocess
  (pps
   ppx_jane
   ppx_yojson_conv
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_hash
   ppx_import
   ppx_inline_test)))
