(include_subdirs qualified)

(library
 (name dungeon)
 (modules tile)
 (libraries base core_kernel logs rl_types core_log raylib constants utils)
 (preprocess
  (pps
   ppx_jane
   ppx_yojson_conv
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_compare
   ppx_sexp_conv
   ppx_hash
   ppx_inline_test)))

(library
 (name chunk)
 (modules chunk)
 (libraries base core_kernel logs dungeon rl_types core_log utils rl_loader)
 (preprocess
  (pps
   ppx_jane
   ppx_yojson_conv
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_sexp_conv
   ppx_compare
   ppx_hash)))
