(include_subdirs no)

(library
 (name state)
 (modules state state_entities state_actors state_levels state_utils)
 (libraries
  base
  core_kernel
  containers
  logs
  types
  entities
  actors
  components
  mapgen
  dungeon
  core_log
  events
  turn_queue
  state_types))

(library
 (name state_types)
 (modules state_types)
 (libraries
  base
  core_kernel
  containers
  logs
  types
  core_log
  entities
  actors
  components
  turn_queue
  chunk_manager))
